--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "getenv-dotenv",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "easy! dotenv",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -28,6 +28,6 @@
     "ts-node": "^10.9.2"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.5"
   }
 }
