--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "getenv-dotenv",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "easy! dotenv",
   "type": "module",
   "main": "./dist/index.js",
+  "module": "./dist/index.cjs.js",
+  "files": [
+    "dist"
+    ],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "require": "./dist/index.cjs.js",
+      "imoprt": "./dist/index.js",
       "default": "./dist/index.js"
    }
   },
